--- a/nodejs_mysql/src/app/views/partials/navigation.hbs
+++ b/nodejs_mysql/src/app/views/partials/navigation.hbs
@@ -3,14 +3,15 @@
     <a href="/">DATA</a>
   </div>
   <div class="pages">
-    <a href="/signup">SignUp</a>
-    <a href="/signin">Login</a>
     {{#if user}}
       <a href="/profile">Profile</a>
       <a href="/add/packages_added">Packages</a>
       <a href="/add/categories_added">Categories</a>
       <a href="/add/subcateg_added">Sub Categories</a>
       <a href="/logout">Logout</a>
+    {{else}}
+      <a href="/signup">SignUp</a>
+      <a href="/signin">Login</a>
     {{/if}}
   </div>
 </nav>
