--- a/nodejs_mysql/src/app/views/add/index.hbs
+++ b/nodejs_mysql/src/app/views/add/index.hbs
@@ -1,4 +1,8 @@
-<div class="tabla_info">                                                                                <table>
+<p>
+<h3>PACKAGE's DETAILS</h3>
+</p>
+<div class="tabla_info">
+    <table>
       <tr>
         <th>Package Name</th>
         <th>Category Name</th>
@@ -19,5 +23,5 @@
            <p>You don't have Information created yet</p>
          <div>
       {{/each}}
-     </table>
+    </table>
 </div>
