--- a/nodejs_mysql/src/app/views/add/list_subcateg.hbs
+++ b/nodejs_mysql/src/app/views/add/list_subcateg.hbs
@@ -10,7 +10,7 @@
          <tr>
            <td>{{id}}</td>
            <td>{{name}}</td>
-           <td>{{category_id}}</td>
+           <td>{{cat_name}}</td>
 	   <td>
              <a href="/add/subcat_delete/{{id}}" id="delete">Delete</a>
              <a href="/add/subcat_edit/{{id}}" id="edit">Edit</a>
